# CS3910-Coursework

./: CMakeLists.txt  README.md
include/CS3910/: Core.h  Expression.h  GP.h  PSO.h  Pallets.h  Simulation.h
scripts/: Run-Repeat.py  Run-Time.py
src/: CMakeLists.txt  GP-Main.cpp  Main.cpp  PSO-Main.cpp
src/GP/: Main.cpp
