cmake_minimum_required(VERSION 3.0.0)
project("CS3910 Coursework")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)


set(CS3910_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(CS3910_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}")
set(CS3910_OUTPUT_DIR "${CS3910_BUILD_DIR}/bin")
set(CS3910_INCLUDE_DIR "${CS3910_DIR}/include")
set(CS3910_SOURCE_DIR "${CS3910_DIR}/src")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

add_subdirectory("${CS3910_SOURCE_DIR}")